# flatbuffers

./: .gitignore  CMakeLists.txt  dune-project  dune-workspace  flatbuffers.opam
include/flatbuffers/: idl.h
ocaml/: .dir-locals.el  README.md  dune  dune-project  flatbuffers.opam
ocaml/lib/: builder.incl.ml  builder.ml  builder.mli  builder_intf.ml  dune  flatbuffers.ml  primitives.ml  primitives.mli  primitives_bigstring.ml  primitives_bytes.ml  primitives_intf.ml  primitives_string.ml  read.ml  read.mli  runtime.incl.ml  runtime.ml  runtime.mli  runtime_intf.ml  util.ml  util.mli
ocaml/test/: dune  fixtures.ml  main_test.ml  monster_test.ml  sample_binary.ml  wire_data_test.ml
ocaml/test/bench/: dune  fb_bench.ml  monster_bench.ml
src/: bfbs_gen_ocaml.cpp  bfbs_gen_ocaml.h  flatc_main.cpp  idl_parser.cpp
